--- a/index.html
+++ b/index.html
@@ -68,52 +68,84 @@
 				<h3>Skills</h3>
 				<ul class="skills">
 					<li>
-						<span class="text">HTML</span>
-						<span class="expertise">
-							<div style="width: 90%"></div>
-						</span>
+						<div class="technology">
+							<div class="circle">
+								<div class="inner-circle">
+									<div class="fill" style="width: 90%;"></div>
+								</div>
+							</div>
+							<span class="text">HTML</span>
+						</div>
 					</li>
 					<li>
-						<span class="text">CSS</span>
-						<span class="expertise">
-							<div style="width: 70%"></div>
-						</span>
+						<div class="technology">
+							<div class="circle">
+								<div class="inner-circle">
+									<div class="fill" style="width: 70%;"></div>
+								</div>
+							</div>
+							<span class="text">CSS</span>
+						</div>
 					</li>
 					<li>
-						<span class="text">JavaScript</span>
-						<span class="expertise">
-							<div style="width: 80%"></div>
-						</span>
+						<div class="technology">
+							<div class="circle">
+								<div class="inner-circle">
+									<div class="fill" style="width: 80%;"></div>
+								</div>
+							</div>
+							<span class="text">JavaScript</span>
+						</div>
 					</li>
 					<li>
-						<span class="text">TypeScript</span>
-						<span class="expertise">
-							<div style="width: 90%"></div>
-						</span>
+						<div class="technology">
+							<div class="circle">
+								<div class="inner-circle">
+									<div class="fill" style="width: 90%;"></div>
+								</div>
+							</div>
+							<span class="text">TypeScript</span>
+						</div>
 					</li>
 					<li>
-						<span class="text">Python</span>
-						<span class="expertise">
-							<div style="width: 75%"></div>
-						</span>
+						<div class="technology">
+							<div class="circle">
+								<div class="inner-circle">
+									<div class="fill" style="width: 75%;"></div>
+								</div>
+							</div>
+							<span class="text">Python</span>
+						</div>
 					</li>
 					<li>
-						<span class="text">Angular</span>
-						<span class="expertise">
-							<div style="width: 70%"></div>
-						</span>
+						<div class="technology">
+							<div class="circle">
+								<div class="inner-circle">
+									<div class="fill" style="width: 80%;"></div>
+								</div>
+							</div>
+							<span class="text">Angular</span>
+						</div>
 					</li>
 					<li>
-						<span class="text">React</span>
-						<span class="expertise">
-							<div style="width: 60%"></div>
-						</span>
+						<div class="technology">
+							<div class="circle">
+								<div class="inner-circle">
+									<div class="fill" style="width: 60%;"></div>
+								</div>
+							</div>
+							<span class="text">React</span>
+						</div>
 					</li>
 					<li>
-						<span class="text">Postgres</span>
-						<span class="expertise">
-							<div style="width: 40%"></div>
-						</span>
+						<div class="technology">
+							<div class="circle">
+								<div class="inner-circle">
+									<div class="fill" style="width: 40%;"></div>
+								</div>
+							</div>
+							<span class="text">Postgres</span>
+						</div>
 					</li>
 				</ul>
 				<h3>Social Presence</h3>
