--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 	<div class="container">
-		<div class="top">
+		<div class="upSection">
 			<div class="imageBox">
 				<div class="box">
 					<img src="img.png" alt="Image" />
@@ -20,8 +20,8 @@
 				<h3>Trina<br />Sikdar<br /><span>Developer</span></h3>
 			</div>
 		</div>
-		<div class="contentBox">
-			<div class="leftSide">
+		<div class="downSection">
+			<div class="leftSection">
 				<h3>Contact Info</h3>
 				<ul>
 					<li>
@@ -176,7 +176,7 @@
 					</li>
 				</ul>
 			</div>
-			<div class="rightSide">
+			<div class="rightSection">
 				<div class="careerObj">
 					<h3>Career Objective</h3>
 					<p>
